# mosaic-extensions

./: .gitignore  AGENTS.md  Justfile  README.md  REVIEW-GUIDE.md
integration-harness/: Cargo.toml  README.md
integration-harness/tests/: arbiter_prism_mnemos.rs  arbiter_soter_cedar_symcc.rs  crucible_loan_classifier.rs
kb/: Capability Matrix.md  Ecosystem.md  Home.md  INDEX.md  LOG.md  Positioning.md
kb/Architecture/: Converge Boundary.md  Dependency Rules.md  Expert Portfolio Architecture.md  Extension Topology.md  Extraction Status.md  Golden Integration Harness.md  Pluralist Reasoning Substrate.md  Port Provider Boundary.md  Repository Map.md  Runtime Assembly.md  SMT vs Interactive Theorem Proving.md
kb/Building/: Developer Guide.md  Getting Started.md  Release and Versioning.md
kb/Experiments/: INDEX.md  LOG.md
kb/History/: Audit Log.md
kb/Modules/: Arbiter.md  Crucible.md  Embassy.md  Ferrox.md  Manifold.md  Mnemos.md  Prism.md  Soter.md
kb/Planning/: MILESTONES.md  Next Steps.md  Typed Payload Boundaries.md  Upstream Handoff.md
kb/Standards/: Backend String Format.md  Extension Standard.md  Real-by-Default Connections.md  Review Guide.md  Runtime Config Encoding.md  Suggestor Contract.md  Upstream Adoption Brief.md
kb/Workflow/: Daily Journey.md  Git Strategy.md  Working with Codex.md
