[package]
name = "mosaic-integration-harness"
version = "0.0.0"
edition = "2024"
rust-version = "1.94.0"
publish = false

[dependencies]
arbiter = { package = "converge-arbiter-policy", path = "../arbiter-policy/crates/arbiter" }
async-trait = { version = "0.1", optional = true }
cedar-policy-symcc = { version = "0.4", optional = true }
converge-core = "3.9.0"
converge-kernel = "3.9.0"
converge-pack = "3.9.0"
crucible = { package = "converge-crucible-models", path = "../crucible-models/crates/crucible" }
mnemos = { package = "converge-mnemos-knowledge", path = "../mnemos-knowledge/crates/mnemos", default-features = false, features = ["memory-only"] }
prism = { package = "converge-prism-analytics", path = "../prism-analytics/crates/prism" }
serde_json = "1"
soter = { package = "converge-soter-smt", path = "../soter-smt/crates/soter", optional = true, features = ["cvc5"] }
tempfile = "3"
tokio = { version = "1.48", features = ["io-util", "macros", "rt-multi-thread"] }

[features]
default = []
soter-cvc5 = [
    "arbiter/analysis",
    "dep:async-trait",
    "dep:cedar-policy-symcc",
    "dep:soter",
]
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
